--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ td { vertical-align: top; }
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
-
+.center{ display: table; margin: 0 auto; text-align: center;
 /* =============================================================================
    Print Styles
    ========================================================================== */
